--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 
 # Ignore configuration files that may contain sensitive information
 /web/sites/*/*settings*.php
+!/web/sites/*/settings.php
 /web/sites/*/*services*.yml
 
 # Ignore paths that may contain user-generated content
