--- a/config/sync/user.role.content_editor.yml
+++ b/config/sync/user.role.content_editor.yml
@@ -3,13 +3,29 @@ langcode: uk
 status: true
 dependencies:
   config:
+    - block_content.type.basic
+    - filter.format.full_html
+    - filter.format.restricted_html
+    - media.type.audio
+    - media.type.document
+    - media.type.image
+    - media.type.remote_video
+    - media.type.video
     - node.type.article
+    - node.type.dokumenty
+    - node.type.federation_members
+    - node.type.management_staff
     - node.type.page
+    - taxonomy.vocabulary.position
+    - taxonomy.vocabulary.slider
     - taxonomy.vocabulary.tags
   module:
-    - comment
+    - block_content
+    - content_translation
     - contextual
     - file
+    - filter
+    - media
     - node
     - path
     - system
@@ -23,25 +39,106 @@ weight: 2
 is_admin: false
 permissions:
   - 'access administration pages'
+  - 'access block library'
   - 'access content overview'
   - 'access contextual links'
   - 'access files overview'
+  - 'access media overview'
+  - 'access taxonomy overview'
   - 'access toolbar'
-  - 'administer url aliases'
   - 'create article content'
+  - 'create audio media'
+  - 'create document media'
+  - 'create dokumenty content'
+  - 'create federation_members content'
+  - 'create image media'
+  - 'create management_staff content'
   - 'create page content'
+  - 'create remote_video media'
+  - 'create terms in position'
+  - 'create terms in slider'
   - 'create terms in tags'
   - 'create url aliases'
+  - 'create video media'
+  - 'delete all revisions'
+  - 'delete any article content'
+  - 'delete any audio media'
+  - 'delete any document media'
+  - 'delete any dokumenty content'
+  - 'delete any federation_members content'
+  - 'delete any image media'
+  - 'delete any management_staff content'
+  - 'delete any media'
+  - 'delete any page content'
+  - 'delete any remote_video media'
+  - 'delete any video media'
   - 'delete article revisions'
+  - 'delete dokumenty revisions'
+  - 'delete federation_members revisions'
+  - 'delete management_staff revisions'
+  - 'delete media'
   - 'delete own article content'
+  - 'delete own dokumenty content'
+  - 'delete own federation_members content'
   - 'delete own files'
+  - 'delete own management_staff content'
   - 'delete own page content'
   - 'delete page revisions'
+  - 'delete term revisions in position'
+  - 'delete term revisions in slider'
+  - 'delete term revisions in tags'
+  - 'delete terms in position'
+  - 'delete terms in slider'
+  - 'delete terms in tags'
+  - 'edit any article content'
+  - 'edit any audio media'
+  - 'edit any basic block content'
+  - 'edit any document media'
+  - 'edit any dokumenty content'
+  - 'edit any federation_members content'
+  - 'edit any image media'
+  - 'edit any management_staff content'
+  - 'edit any page content'
+  - 'edit any remote_video media'
+  - 'edit any video media'
   - 'edit own article content'
-  - 'edit own comments'
+  - 'edit own dokumenty content'
+  - 'edit own federation_members content'
+  - 'edit own management_staff content'
   - 'edit own page content'
+  - 'edit terms in position'
+  - 'edit terms in slider'
   - 'edit terms in tags'
   - 'revert all revisions'
+  - 'revert article revisions'
+  - 'revert dokumenty revisions'
+  - 'revert federation_members revisions'
+  - 'revert management_staff revisions'
+  - 'revert page revisions'
+  - 'revert term revisions in position'
+  - 'revert term revisions in slider'
+  - 'revert term revisions in tags'
+  - 'translate any entity'
+  - 'translate editable entities'
+  - 'update any media'
+  - 'update media'
+  - 'use text format full_html'
+  - 'use text format restricted_html'
+  - 'view all media revisions'
   - 'view all revisions'
+  - 'view any audio media revisions'
+  - 'view any document media revisions'
+  - 'view any image media revisions'
+  - 'view any remote_video media revisions'
+  - 'view any video media revisions'
+  - 'view article revisions'
+  - 'view dokumenty revisions'
+  - 'view federation_members revisions'
+  - 'view management_staff revisions'
   - 'view own unpublished content'
+  - 'view own unpublished media'
+  - 'view page revisions'
+  - 'view term revisions in position'
+  - 'view term revisions in slider'
+  - 'view term revisions in tags'
   - 'view the administration theme'
