Installed the Metatag module and updated configurations

--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "drupal/imagemagick": "^4.0",
         "drupal/media_library_form_element": "^2.1",
         "drupal/menu_multilingual": "^2.0",
+        "drupal/metatag": "^2.2",
         "drupal/pathauto": "^1.14",
         "drush/drush": "^13.7"
     },
