--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -3,7 +3,6 @@ _core:
 module:
   admin_toolbar: 0
   admin_toolbar_tools: 0
-  announcements_feed: 0
   automated_cron: 0
   big_pipe: 0
   block: 0
@@ -15,8 +14,6 @@ module:
   contextual: 0
   datetime: 0
   dblog: 0
-  devel: 0
-  devel_generate: 0
   drw: 0
   dxpr_theme_helper: 0
   dynamic_page_cache: 0
@@ -29,11 +26,8 @@ module:
   file_mdm_font: 0
   filter: 0
   gin_toolbar: 0
-  help: 0
-  history: 0
   image: 0
   language: 0
-  layout_builder: 0
   layout_discovery: 0
   link: 0
   locale: 0
@@ -41,7 +35,6 @@ module:
   media_library: 0
   media_library_form_element: 0
   menu_link_content: 0
-  menu_multilingual: 0
   menu_ui: 0
   metatag: 0
   mysql: 0
@@ -50,8 +43,8 @@ module:
   page_cache: 0
   path: 0
   path_alias: 0
-  search: 0
   shortcut: 0
+  simple_sitemap: 0
   standard: 0
   system: 0
   taxonomy: 0
