--- a/config/sync/fasu_theme.settings.yml
+++ b/config/sync/fasu_theme.settings.yml
@@ -24,6 +24,7 @@ full_width_containers:
   cnt_content_bottom: 0
 full_width_content_types:
   article: 0
+  dokumenty: 0
   federation_members: 0
   management_staff: 0
   page: 0
@@ -225,8 +226,8 @@ header_mobile_fixed: 0
 color_scheme: custom
 color_palette_base: '#284ed9'
 color_palette_basetext: '#ffffff'
-color_palette_link: '#284ed9'
-color_palette_accent1: '#ffffff'
+color_palette_link: '#375ce2'
+color_palette_accent1: '#9a9a9a'
 color_palette_accent1text: '#333333'
 color_palette_accent2: '#284fd8'
 color_palette_accent2text: '#ffffff'
@@ -249,4 +250,4 @@ color_palette_graylighter: '#ededed'
 color_palette_silver: '#f1f1f1'
 color_palette_body: '#efefef'
 web_icons_upload: null
-color_palette: 'a:25:{s:4:"base";s:7:"#284ed9";s:8:"basetext";s:7:"#ffffff";s:4:"link";s:7:"#284ed9";s:7:"accent1";s:7:"#ffffff";s:11:"accent1text";s:7:"#333333";s:7:"accent2";s:7:"#284fd8";s:11:"accent2text";s:7:"#ffffff";s:4:"text";s:7:"#555555";s:8:"headings";s:7:"#333333";s:4:"card";s:7:"#ffffff";s:8:"cardtext";s:7:"#444444";s:6:"footer";s:7:"#121252";s:10:"footertext";s:7:"#747a85";s:9:"secheader";s:7:"#284fd9";s:13:"secheadertext";s:7:"#fffffe";s:6:"header";s:7:"#ffffff";s:10:"headertext";s:7:"#696969";s:10:"headerside";s:7:"#20252a";s:14:"headersidetext";s:7:"#737a85";s:9:"pagetitle";s:7:"#e9e9ff";s:13:"pagetitletext";s:7:"#373737";s:9:"graylight";s:7:"#cccccc";s:11:"graylighter";s:7:"#ededed";s:6:"silver";s:7:"#f1f1f1";s:4:"body";s:7:"#efefef";}'
+color_palette: 'a:25:{s:4:"base";s:7:"#284ed9";s:8:"basetext";s:7:"#ffffff";s:4:"link";s:7:"#375ce2";s:7:"accent1";s:7:"#9a9a9a";s:11:"accent1text";s:7:"#333333";s:7:"accent2";s:7:"#284fd8";s:11:"accent2text";s:7:"#ffffff";s:4:"text";s:7:"#555555";s:8:"headings";s:7:"#333333";s:4:"card";s:7:"#ffffff";s:8:"cardtext";s:7:"#444444";s:6:"footer";s:7:"#121252";s:10:"footertext";s:7:"#747a85";s:9:"secheader";s:7:"#284fd9";s:13:"secheadertext";s:7:"#fffffe";s:6:"header";s:7:"#ffffff";s:10:"headertext";s:7:"#696969";s:10:"headerside";s:7:"#20252a";s:14:"headersidetext";s:7:"#737a85";s:9:"pagetitle";s:7:"#e9e9ff";s:13:"pagetitletext";s:7:"#373737";s:9:"graylight";s:7:"#cccccc";s:11:"graylighter";s:7:"#ededed";s:6:"silver";s:7:"#f1f1f1";s:4:"body";s:7:"#efefef";}'
