Removed unnecessary modules from the project

--- a/config/sync/user.role.content_editor.yml
+++ b/config/sync/user.role.content_editor.yml
@@ -19,7 +19,6 @@ dependencies:
     - taxonomy.vocabulary.slider
   module:
     - content_translation
-    - contextual
     - file
     - filter
     - media
@@ -37,8 +36,6 @@ is_admin: false
 permissions:
   - 'access administration pages'
   - 'access content overview'
-  - 'access contextual links'
-  - 'access files overview'
   - 'access media overview'
   - 'access taxonomy overview'
   - 'access toolbar'
@@ -49,13 +46,13 @@ permissions:
   - 'create federation_members content'
   - 'create image media'
   - 'create management_staff content'
+  - 'create media'
   - 'create page content'
   - 'create remote_video media'
   - 'create terms in position'
   - 'create terms in slider'
   - 'create url aliases'
   - 'create video media'
-  - 'delete all revisions'
   - 'delete any article content'
   - 'delete any audio media'
   - 'delete any document media'
@@ -67,10 +64,6 @@ permissions:
   - 'delete any page content'
   - 'delete any remote_video media'
   - 'delete any video media'
-  - 'delete article revisions'
-  - 'delete dokumenty revisions'
-  - 'delete federation_members revisions'
-  - 'delete management_staff revisions'
   - 'delete media'
   - 'delete own article content'
   - 'delete own dokumenty content'
@@ -78,9 +71,6 @@ permissions:
   - 'delete own files'
   - 'delete own management_staff content'
   - 'delete own page content'
-  - 'delete page revisions'
-  - 'delete term revisions in position'
-  - 'delete term revisions in slider'
   - 'delete terms in position'
   - 'delete terms in slider'
   - 'edit any article content'
@@ -100,34 +90,12 @@ permissions:
   - 'edit own page content'
   - 'edit terms in position'
   - 'edit terms in slider'
-  - 'revert all revisions'
-  - 'revert article revisions'
-  - 'revert dokumenty revisions'
-  - 'revert federation_members revisions'
-  - 'revert management_staff revisions'
-  - 'revert page revisions'
-  - 'revert term revisions in position'
-  - 'revert term revisions in slider'
   - 'translate any entity'
   - 'translate editable entities'
   - 'update any media'
   - 'update media'
   - 'use text format full_html'
   - 'use text format restricted_html'
-  - 'view all media revisions'
-  - 'view all revisions'
-  - 'view any audio media revisions'
-  - 'view any document media revisions'
-  - 'view any image media revisions'
-  - 'view any remote_video media revisions'
-  - 'view any video media revisions'
-  - 'view article revisions'
-  - 'view dokumenty revisions'
-  - 'view federation_members revisions'
-  - 'view management_staff revisions'
   - 'view own unpublished content'
   - 'view own unpublished media'
-  - 'view page revisions'
-  - 'view term revisions in position'
-  - 'view term revisions in slider'
   - 'view the administration theme'
