--- a/config/sync/core.entity_form_display.taxonomy_term.slider.default.yml
+++ b/config/sync/core.entity_form_display.taxonomy_term.slider.default.yml
@@ -7,7 +7,6 @@ dependencies:
     - taxonomy.vocabulary.slider
   module:
     - media_library
-    - path
 id: taxonomy_term.slider.default
 targetEntityType: taxonomy_term
 bundle: slider
@@ -20,13 +19,6 @@ content:
     settings:
       media_types: {  }
     third_party_settings: {  }
-  langcode:
-    type: language_select
-    weight: 2
-    region: content
-    settings:
-      include_locked: true
-    third_party_settings: {  }
   name:
     type: string_textfield
     weight: 0
@@ -35,18 +27,15 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  path:
-    type: path
-    weight: 3
-    region: content
-    settings: {  }
-    third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 4
+    weight: 2
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
 hidden:
   description: true
+  langcode: true
+  path: true
+  translation: true
