--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -3,6 +3,7 @@ _core:
 module:
   admin_toolbar: 0
   admin_toolbar_tools: 0
+  amswap: 0
   automated_cron: 0
   big_pipe: 0
   block: 0
@@ -56,6 +57,7 @@ module:
   views_ui: 0
   pathauto: 1
   content_translation: 10
+  fasu_gin_toolbar: 10
   views: 10
 theme:
   olivero: 0
