--- a/config/sync/node.type.article.yml
+++ b/config/sync/node.type.article.yml
@@ -6,15 +6,14 @@ dependencies:
     - menu_ui
 third_party_settings:
   menu_ui:
-    available_menus:
-      - main
-    parent: 'main:'
+    available_menus: {  }
+    parent: ''
 _core:
   default_config_hash: Fe3N1uqaAyyKJbVkqT-btXy3t98puW8GCRD822xjl10
 name: Стаття
 type: article
 description: '<em>Статті</em> використовуються для чутливих до дати публікації матеріалів на зразок новин, пресрелізів чи дописів до блоґу.'
 help: null
-new_revision: true
+new_revision: false
 preview_mode: 1
-display_submitted: true
+display_submitted: false
