--- a/config/sync/node.type.page.yml
+++ b/config/sync/node.type.page.yml
@@ -6,15 +6,14 @@ dependencies:
     - menu_ui
 third_party_settings:
   menu_ui:
-    available_menus:
-      - main
-    parent: 'main:'
+    available_menus: {  }
+    parent: ''
 _core:
   default_config_hash: i0snV8Wj--OkRW12UdachUiYiz3FbeMwHu_pZYfzKLc
 name: 'Проста сторінка'
 type: page
 description: "<em>Прості сторінки</em> використовуються для розміщення незмінюваного вмісту на кшталт сторінки 'Про нас'."
 help: null
-new_revision: true
+new_revision: false
 preview_mode: 1
 display_submitted: false
