Changed and translated site name

--- a/config/sync/system.site.yml
+++ b/config/sync/system.site.yml
@@ -2,7 +2,7 @@ _core:
   default_config_hash: ijfbzDTN4CbE7Sr-6ubWzy_t1vH4OtU1doNCLssVz-4
 langcode: uk
 uuid: c61bf324-e8f3-43b9-b848-d6621a3ba370
-name: 'NAC – National Airsport Control'
+name: 'ФАСУ - Федерація Аероспорту України'
 mail: no-reply@ukrnac.org
 slogan: ''
 page:
