--- a/config/sync/editor.editor.full_html.yml
+++ b/config/sync/editor.editor.full_html.yml
@@ -13,19 +13,27 @@ editor: ckeditor5
 settings:
   toolbar:
     items:
+      - undo
+      - redo
+      - '|'
       - bold
       - italic
       - strikethrough
+      - underline
       - superscript
       - subscript
       - removeFormat
       - '|'
+      - alignment
+      - indent
+      - outdent
       - link
       - '|'
       - bulletedList
       - numberedList
       - '|'
       - blockQuote
+      - drupalMedia
       - drupalInsertImage
       - insertTable
       - horizontalLine
@@ -35,6 +43,12 @@ settings:
       - '|'
       - sourceEditing
   plugins:
+    ckeditor5_alignment:
+      enabled_alignments:
+        - center
+        - justify
+        - left
+        - right
     ckeditor5_codeBlock:
       languages:
         -
@@ -95,6 +109,8 @@ settings:
       multiBlock: true
     ckeditor5_sourceEditing:
       allowed_tags: {  }
+    media_media:
+      allow_view_mode_override: false
 image_upload:
   status: true
   scheme: public
