Fixed node translations

--- a/config/sync/field.field.node.dokumenty.field_documents.yml
+++ b/config/sync/field.field.node.dokumenty.field_documents.yml
@@ -6,7 +6,14 @@ dependencies:
     - field.storage.node.field_documents
     - node.type.dokumenty
   module:
+    - content_translation
     - file
+third_party_settings:
+  content_translation:
+    translation_sync:
+      target_id: target_id
+      display: display
+      description: description
 id: node.dokumenty.field_documents
 field_name: field_documents
 entity_type: node
@@ -14,7 +21,7 @@ bundle: dokumenty
 label: Документи
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
