--- a/config/sync/field.field.node.federation_members.field_contact_info.yml
+++ b/config/sync/field.field.node.federation_members.field_contact_info.yml
@@ -16,7 +16,7 @@ bundle: federation_members
 label: 'Контактна інформація'
 description: 'Контактна інформація учасника федерація.'
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
