--- a/config/sync/field.field.node.federation_members.field_description.yml
+++ b/config/sync/field.field.node.federation_members.field_description.yml
@@ -14,7 +14,7 @@ bundle: federation_members
 label: 'Короткий опис'
 description: 'Короткий опис учасника федерації, та контактна інформація.'
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
