--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,9 @@
         "drupal/gin": "^5.0",
         "drupal/gin_toolbar": "^3.0",
         "drupal/image_effects": "^4.0",
+        "drupal/media_library_edit": "^3.0",
         "drupal/media_library_form_element": "^2.1",
+        "drupal/media_library_translate": "^1.0",
         "drupal/metatag": "^2.2",
         "drupal/pathauto": "^1.14",
         "drupal/simple_sitemap": "^4.2",
