--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,7 @@
 /web/vendor
 /web/core
 /web/modules/README.txt
-/web/modules/contrib
+/web/modules/contrib/*
 !/web/modules/contrib/media_library_translate/css/media_library_translate.admin.css
 /web/profiles/README.txt
 /web/profiles/contrib
