--- a/.gitignore
+++ b/.gitignore
@@ -27,8 +27,7 @@
 /web/vendor
 /web/core
 /web/modules/README.txt
-/web/modules/contrib/*
-!/web/modules/contrib/media_library_translate
+/web/modules/contrib
 /web/profiles/README.txt
 /web/profiles/contrib
 /web/sites/development.services.yml
