--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -34,7 +34,9 @@ module:
   locale: 0
   media: 0
   media_library: 0
+  media_library_edit: 0
   media_library_form_element: 0
+  media_library_translate: 0
   menu_link_content: 0
   menu_ui: 0
   metatag: 0
