--- a/config/sync/core.base_field_override.media.document.changed.yml
+++ b/config/sync/core.base_field_override.media.document.changed.yml
@@ -11,7 +11,7 @@ bundle: document
 label: Змінено
 description: "Час останнього редагування медіа-об'єкта."
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
