--- a/config/sync/core.base_field_override.media.document.metatag.yml
+++ b/config/sync/core.base_field_override.media.document.metatag.yml
@@ -13,7 +13,7 @@ bundle: document
 label: 'Metatags (Hidden field for JSON support)'
 description: 'Обчислені метатеги для сутності.'
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
