--- a/config/sync/core.base_field_override.media.document.uid.yml
+++ b/config/sync/core.base_field_override.media.document.uid.yml
@@ -11,7 +11,7 @@ bundle: document
 label: Автор
 description: 'Ідентифікатор користувача, що є автором.'
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: 'Drupal\media\Entity\Media::getDefaultEntityOwner'
 settings:
