--- a/config/sync/core.entity_view_display.media.document.default.yml
+++ b/config/sync/core.entity_view_display.media.document.default.yml
@@ -16,8 +16,9 @@ mode: default
 content:
   field_media_document:
     type: file_default
-    label: visually_hidden
-    settings: {  }
+    label: hidden
+    settings:
+      use_description_as_link_text: true
     third_party_settings: {  }
     weight: 1
     region: content
