--- a/config/sync/core.entity_view_display.node.dokumenty.default.yml
+++ b/config/sync/core.entity_view_display.node.dokumenty.default.yml
@@ -6,7 +6,6 @@ dependencies:
     - field.field.node.dokumenty.field_documents
     - node.type.dokumenty
   module:
-    - file
     - user
 id: node.dokumenty.default
 targetEntityType: node
@@ -14,10 +13,11 @@ bundle: dokumenty
 mode: default
 content:
   field_documents:
-    type: file_table
+    type: entity_reference_entity_view
     label: hidden
     settings:
-      use_description_as_link_text: true
+      view_mode: default
+      link: false
     third_party_settings: {  }
     weight: 101
     region: content
