--- a/config/sync/field.field.media.document.field_media_document.yml
+++ b/config/sync/field.field.media.document.field_media_document.yml
@@ -6,10 +6,17 @@ dependencies:
     - field.storage.media.field_media_document
     - media.type.document
   module:
+    - content_translation
     - file
   enforced:
     module:
       - media
+third_party_settings:
+  content_translation:
+    translation_sync:
+      target_id: target_id
+      display: display
+      description: description
 _core:
   default_config_hash: DY5HtJTxUjFRGU_PaY6ifo2nhR-nAZ0y0s6kLmUbv5g
 id: media.document.field_media_document
@@ -19,7 +26,7 @@ bundle: document
 label: Документ
 description: ''
 required: true
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
@@ -28,5 +35,5 @@ settings:
   file_directory: '[date:custom:Y]-[date:custom:m]'
   file_extensions: 'txt rtf doc docx ppt pptx xls xlsx pdf odf odg odp ods odt fodt fods fodp fodg key numbers pages'
   max_filesize: ''
-  description_field: false
+  description_field: true
 field_type: file
