--- a/config/sync/field.storage.node.field_documents.yml
+++ b/config/sync/field.storage.node.field_documents.yml
@@ -1,20 +1,17 @@
-uuid: 88b6362d-f254-4db3-a7cf-1685e090c0a0
+uuid: e2fa9e2c-a6b1-4350-8aee-4e01b873fed3
 langcode: uk
 status: true
 dependencies:
   module:
-    - file
+    - media
     - node
 id: node.field_documents
 field_name: field_documents
 entity_type: node
-type: file
+type: entity_reference
 settings:
-  target_type: file
-  display_field: true
-  display_default: true
-  uri_scheme: public
-module: file
+  target_type: media
+module: core
 locked: false
 cardinality: -1
 translatable: true
