Fixed the management staff view and changed the site email address

--- a/config/sync/system.site.yml
+++ b/config/sync/system.site.yml
@@ -3,7 +3,7 @@ _core:
 langcode: uk
 uuid: c61bf324-e8f3-43b9-b848-d6621a3ba370
 name: 'ФАСУ - Федерація Аероспорту України'
-mail: no-reply@ukrnac.org
+mail: fasu.ukraine@gmail.com
 slogan: ''
 page:
   403: ''
