Disabled translation for the link field in the federation members content

--- a/config/sync/field.field.node.federation_members.field_link.yml
+++ b/config/sync/field.field.node.federation_members.field_link.yml
@@ -14,7 +14,7 @@ bundle: federation_members
 label: Посилання
 description: 'Посилання на зовнішні ресурси учасника федерації.'
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
