--- a/config/sync/core.base_field_override.node.presidium.status.yml
+++ b/config/sync/core.base_field_override.node.presidium.status.yml
@@ -1,20 +1,20 @@
-uuid: 0536e85d-38d3-4693-90d5-ad2a5d14e40c
+uuid: 293ca092-2fb3-40b2-9ae4-50cf7d7effdd
 langcode: uk
 status: true
 dependencies:
   config:
     - node.type.presidium
-id: node.presidium.promote
-field_name: promote
+id: node.presidium.status
+field_name: status
 entity_type: node
 bundle: presidium
-label: 'Винесено на головну сторінку'
+label: Опубліковано
 description: ''
 required: false
 translatable: false
 default_value:
   -
-    value: 0
+    value: 1
 default_value_callback: ''
 settings:
   on_label: Увімкнено
